Add .gitignore and main.py

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,13 @@
-# Byte-compiled / optimized / DLL files
+# Python
 __pycache__/
 *.py[cod]
-*$py.class
+*.pyo
 
 # Virtual environment
-env/
+venv/
 
-# Distribution / packaging
-build/
-dist/
-*.egg-info/
-
-# IDEs and editors
-.idea/
-.vscode/
+# Miscellaneous
+.DS_Store
+*.log
+*.bak
+*.swp
